changed the factory bit; played with directives.

--- a/public/inspiniaSeed/index.html
+++ b/public/inspiniaSeed/index.html
@@ -36,7 +36,8 @@
 <!-- ControllerAs syntax -->
 <!-- Main controller with serveral data used in Inspinia theme on diferent view -->
 <body ng-controller="MainCtrl as main">
-
+<!-- <body ng-controller="LoginCtrl as login"> -->
+HELLO
 <!-- Main view  -->
 <div ui-view></div>
 
